# gfxprog

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/: CMakeLists.txt  Entities.cpp  Entities.h  Entities3d.cpp  Entities3d.h  Level3d.cpp  Level3d.h  hello.cpp  model.cpp  mvp.cpp  pacman.cpp  pacman3d.cpp  square.cpp  texture.cpp  triangle.cpp  triangle.frag  triangle.vert
apps/pacman/: pacman.cpp
apps/pacman3d/: Entities.cpp  Entities.h  Level.cpp  Level.h  generation.cpp  generation.h  pacman.cpp
cmake/: FindStb.cmake
docs/: CMakeLists.txt  mainpage.md
include/glove/: AnimatedSpriteSheet.h  Components.h  Framebuffer.h  GameState.h  Model.h  ResourceStore.h  ShaderProgram.h  Texture.h  VertexBuffer.h  VertexBufferObject.h  VertexFormats.h  Window.h  lib.h  utility.h
include/project/: lib.h
lib/: AnimatedSpriteSheet.cpp  CMakeLists.txt  Components.cpp  Framebuffer.cpp  GameState.cpp  Model.cpp  ShaderProgram.cpp  Texture.cpp  VertexBuffer.cpp  VertexBufferObject.cpp  VertexFormats.cpp  Window.cpp  lib.cpp  utility.cpp
resources/models/: sphere.mtl
resources/shaders/: minimap.frag  model.frag  model.vert  model_shadow.vert  mvp.frag  mvp.vert  pacman.frag  pacman.vert  pellet_shadow.vert  pellets.frag  pellets.vert  shadow.frag  square.frag  square.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
shaders/: pacman.frag  pacman.vert  square.frag
tests/: CMakeLists.txt  test-lib.cpp
