set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(lib lib.cpp utility.cpp ShaderProgram.cpp Texture.cpp VertexBuffer.cpp Window.cpp AnimatedSpriteSheet.cpp ../include/glove/lib.h ../include/glove/utility.h ../include/glove/ShaderProgram.h ../include/glove/Texture.h ../include/glove/VertexBuffer.h ../include/glove/Window.h ../include/glove/AnimatedSpriteSheet.h)
target_compile_options(lib PRIVATE ${COMPILER_WARNINGS_AND_ERRORS})
target_compile_definitions(lib PUBLIC _USE_MATH_DEFINES)
target_include_directories(lib PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_link_libraries(lib PUBLIC GLEW::GLEW glfw glm OpenGL::GL stb)
target_precompile_headers(lib PRIVATE <iostream> <chrono> <string> <vector> <array> <GL/glew.h> <glm/glm.hpp> <glm/gtc/type_ptr.hpp> <glm/gtc/matrix_transform.hpp>)
